--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Distribuidora - Maravilla</title>
+        <!-- Primary Meta Tags -->
+<title>Distribuidora  - Maravilla - Aceite Comestible  </title>
+<meta name="title" content="Distribuidora  - Maravilla - Aceite Comestible  ">
+<meta name="description" content="Proveedor Mayorista de Alimentos Aceites Comestibles Soja a Granel!">
+<meta name="robots" content= "index, follow">
+<meta name="keywords" content="aceite suelto, girasol, don roberto, aceite para fritura, vicentin, cocamar, alzamar"/>
+<meta name="author" content="Denis Cantero" />
+<meta name="copyright" content="https://webpy.xyz" />
+<meta name="robots" content="index"/>
+<meta name="robots" content="follow"/>
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://distrimaravilla.netlify.app">
+<meta property="og:title" content="Distribuidora  - Maravilla - Aceite Comestible  ">
+<meta property="og:description" content="Proveedor Mayorista de Alimentos Aceites Comestibles Soja a Granel!">
+<meta property="og:image" content="/assets/img/logo maravilla.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://distrimaravilla.netlify.app">
+<meta property="twitter:title" content="Distribuidora  - Maravilla - Aceite Comestible  ">
+<meta property="twitter:description" content="Proveedor Mayorista de Alimentos Aceites Comestibles Soja a Granel!">
+<meta property="twitter:image" content="/assets/img/logo maravilla.png">
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
