--- a/meta.html
+++ b/meta.html
@@ -11,14 +11,14 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://metatags.io/">
+<meta property="og:url" content="https://distrimaravilla.netlify.app">
 <meta property="og:title" content="Distribuidora  - Maravilla - Aceite Comestible  ">
 <meta property="og:description" content="Proveedor Mayorista de Alimentos Aceites Comestibles Soja a Granel!">
 <meta property="og:image" content="/assets/img/logo maravilla.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:url" content="https://distrimaravilla.netlify.app">
 <meta property="twitter:title" content="Distribuidora  - Maravilla - Aceite Comestible  ">
 <meta property="twitter:description" content="Proveedor Mayorista de Alimentos Aceites Comestibles Soja a Granel!">
 <meta property="twitter:image" content="/assets/img/logo maravilla.png">
