--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                     <h2 class="section-heading text-uppercase">Contacto</h2>
                     <h3 class="section-subheading text-muted">Complete los Campos en breve le respondemos.</h3>
                 </div>
-                <form name="maravilla" method="POST" data-netlify="true">
+                <form name="maravilla" method="POST" data-netlify="true" action="index.html" >
                     <div class="row align-items-stretch mb-5">
                         <div class="col-md-6">
                             <div class="form-group">
