--- a/pedido.html
+++ b/pedido.html
@@ -160,7 +160,7 @@
 					</h3>
 				</div>
 				<div class="container mt-5">
-          <form class=" mx-auto" id="enviar-pedido" netlify name="pedidos" method="POST">
+          <form class=" mx-auto" id="enviar-pedido" netlify name="pedidos" method="POST" action="/">
             <div class="form-group row">
               <label for="ubicacion" class="col-4 col-form-label">Direccion</label>
               <div class="col-8">
