--- a/pedido.html
+++ b/pedido.html
@@ -221,7 +221,7 @@
             <div class="form-group row">
               <label for="select" class="col-4 col-form-label">Cantidad Litros:</label>
               <div class="col-8">
-                <input type="number" id="cantidad" class="form-control" min="20" step="10" value="20" />
+                <input type="number" id="cantidad" class="form-control" min="20" step="10" value="20" name="cantidad"/>
               </div>
             </div>
 			
