--- a/404.html
+++ b/404.html
@@ -1,65 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>404</title>
-        <link href="css/styles.min.css" rel="stylesheet" />
+		<meta name="lang" content="es" />
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<meta name="geo.placename" content="Asunción, Paraguay" />
+		<title>Error 404 - Página no encontrada</title>
+		<!-- Enlace a los estilos de Tailwind CSS -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+			rel="stylesheet" />
+
+		<!-- Estilos personalizados -->
+		<style>
+			/* Agrega aquí tus estilos personalizados si es necesario */
+			body {
+				font-family: 'Arial', sans-serif;
+				background-color: #f3f4f6;
+			}
+
+			.container {
+				max-width: 800px;
+				margin: 0 auto;
+				text-align: center;
+				padding: 4rem 0;
+			}
+
+			.error-code {
+				font-size: 6rem;
+				font-weight: bold;
+				color: #f56565;
+			}
+
+			.error-message {
+				font-size: 1.5rem;
+				margin-top: 1rem;
+				color: #718096;
+			}
+
+			.back-to-home {
+				margin-top: 2rem;
+				color: #4a5568;
+				text-decoration: none;
+				font-weight: bold;
+				display: inline-block;
+				padding: 0.5rem 1rem;
+				border: 2px solid #4a5568;
+				border-radius: 0.25rem;
+				transition: background-color 0.3s, color 0.3s;
+			}
+
+			.back-to-home:hover {
+				background-color: #4a5568;
+				color: #ffffff;
+			}
+		</style>
 	</head>
-	<body></body>
-</html>
-<body>
-    
-
-<style>
-	body {
-		background: #2e95ef;
-		background-image: -moz-radial-gradient(
-			center 45deg,
-			circle cover,
-			#9bd1ff,
-			#2e95ef
-		);
-		background-image: -webkit-gradient(
-			radial,
-			50% 50%,
-			0,
-			50% 50%,
-			800,
-			from(#9bd1ff),
-			to(#2e95ef)
-		);
-		padding-top: 15%;
-	}
-	.img-error {
-		width: 220px;
-		height: 220px;
-	}
-</style>
-<div class="container bootstrap snippets bootdey">
-	<div class="row">
-		<div class="col-md-12">
-			<div class="pull-right" style="margin-top: 10px">
-				<div class="col-md-10 col-md-offset-1 pull-right">
-					<img
-						class="img-error"
-						src="https://bootdey.com/img/Content/fdfadfadsfadoh.png"
-					/>
-					<h2>404 Pagina no encontrada</h2>
-					<p>Lo sentimos, se ha producido un error, no se ha encontrado la página solicitada.</p>
-					<div class="error-actions">
-						<a href="/" class="btn btn-primary btn-lg">
-							<span class="glyphicon glyphicon-arrow-left"></span>
-							Volver al Inicio
-						</a>
-					</div>
-				</div>
-			</div>
+	<body class="font-sans">
+		<!-- Contenido principal -->
+		<div class="container">
+			<div class="error-code">404</div>
+			<div class="error-message">Página no encontrada</div>
+			<a href="/" class="back-to-home">Volver a la página de inicio</a>
 		</div>
-	</div>
-</div>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.
-</body>
+	</body>
+</html>
