cambios en el slider

--- a/index.html
+++ b/index.html
@@ -210,13 +210,13 @@
 					<div
 						class="swiper-slide bg-gradient-to-r from-purple-700 to-cyan-500 text-white flex items-center justify-center">
 						<p class="text-4xl font-bold">
-							<img src="assets\img\slider\slider1-montana-sadia.jpg" alt="" />
+							<img src="assets\img\slider\slider1.webp" alt="" />
 						</p>
 					</div>
 					<div
 						class="swiper-slide bg-gradient-to-r from-purple-700 to-cyan-500 text-white flex items-center justify-center">
 						<p class="text-4xl font-bold">
-							<img src="assets\img\slider\slider2-montana-sadia.jpg" alt="" />
+							<img src="assets\img\slider\slider2.webp" alt="" />
 						</p>
 					</div>
 				</div>
@@ -262,7 +262,7 @@
 				<!-- Imagen a la Derecha -->
 				<div class="mt-6 lg:mt-0 lg:w-1/2">
 					<img
-						src="assets\img\COMBO5X5.png"
+						src="assets\img\COMBO5X5.webp"
 						alt="Combo de productos de limpieza"
 						class="rounded-lg" />
 				</div>
@@ -278,7 +278,7 @@
 				<!-- Imagen a la Izquierda -->
 				<div class="mt-6 lg:mt-0 lg:w-1/2">
 					<img
-						src="assets\img\entrega.png"
+						src="assets\img\entrega.webp"
 						alt="Imagend un camion haciendo entrega"
 						class="rounded-lg" />
 				</div>
