--- a/faq.html
+++ b/faq.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 	<head>
+		<meta name="lang" content="es" />
 		<meta charset="utf-8" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<meta name="geo.placename" content="Asunción, Paraguay" />
+
 		<!-- Meta tags -->
 		<!-- Primary Meta Tags -->
-		<title>FAQ | Distribuidora Maravilla</title>
-		<meta
-			name="title"
-			content="Distribuidora  - Maravilla - Aceite Comestible" />
+		<title>Distribuidora Maravilla | Preguntas Frecuentes</title>
 		<meta
 			name="description"
-			content="Proveedor Mayorista de Alimentos Aceites Comestibles Soja a Granel!" />
+			content="Distribuidora Maravilla: Mayorista de productos de limpieza en Asunción, Paraguay. Descubre nuestra variedad de productos de limpieza al por mayor, desde detergentes hasta soluciones especializadas. Calidad y servicio excepcionales para mantener tus espacios impecables. ¡Realiza tu pedido hoy y disfruta de envíos a Asunción y alrededores!" />
+
 		<meta name="robots" content="index, follow" />
 		<meta
 			name="keywords"
-			content="aceite suelto, girasol, don roberto, aceite para fritura, vicentin, cocamar, alzamar" />
+			content="productos de limpieza, mayorista, detergentes, soluciones de limpieza, Asunción, Paraguay" />
 		<meta name="author" content="Denis Cantero" />
 		<meta name="copyright" content="https://webpy.xyz" />
 		<meta name="robots" content="index" />
@@ -28,28 +29,67 @@
 		<meta property="og:url" content="https://distrimaravilla.store" />
 		<meta
 			property="og:title"
-			content="Distribuidora  - Maravilla - Aceite Comestible" />
+			content="Distribuidora Maravilla - Mayorista de Productos de Limpieza en Asunción, Paraguay" />
 		<meta
 			property="og:description"
-			content="Proveedor Mayorista de Alimentos Aceites Comestibles Soja a Granel!" />
-		<meta property="og:image" content="assets/img/logo_maravilla.png" />
+			content="Distribuidora Maravilla: Mayorista de productos de limpieza en Asunción, Paraguay. Descubre nuestra variedad de productos de limpieza al por mayor, desde detergentes hasta soluciones especializadas. Calidad y servicio excepcionales para mantener tus espacios impecables. ¡Realiza tu pedido hoy y disfruta de envíos a Asunción y alrededores!" />
+		<meta property="og:image" content="assets/img/ogefacebook.webp" />
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
 		<meta property="twitter:url" content="https://distrimaravilla.store" />
+		<meta property="twitter:image" content="assets/img/ogefacebook.webp" />
+
 		<meta
 			property="twitter:title"
-			content="Distribuidora  - Maravilla - Aceite Comestible" />
+			content="Distribuidora Maravilla - Mayorista de Productos de Limpieza en Asunción, Paraguay" />
 		<meta
 			property="twitter:description"
-			content="Proveedor Mayorista de Alimentos Aceites Comestibles Soja a Granel!" />
-		<meta property="twitter:image" content="assets/img/logo_maravilla.png" />
+			content="Distribuidora Maravilla: Mayorista de productos de limpieza en Asunción, Paraguay. Descubre nuestra variedad de productos de limpieza al por mayor, desde detergentes hasta soluciones especializadas. Calidad y servicio excepcionales para mantener tus espacios impecables. ¡Realiza tu pedido hoy y disfruta de envíos a Asunción y alrededores!" />
+		<meta property="twitter:image" content="assets/img/ogefacebook.webp" />
 
 		<!-- Favicon -->
 		<link
 			rel="apple-touch-icon"
+			sizes="57x57"
+			href="favicon/apple-icon-57x57.png" />
+		<link
+			rel="apple-touch-icon"
+			sizes="60x60"
+			href="favicon/apple-icon-60x60.png" />
+		<link
+			rel="apple-touch-icon"
+			sizes="72x72"
+			href="favicon/apple-icon-72x72.png" />
+		<link
+			rel="apple-touch-icon"
+			sizes="76x76"
+			href="favicon/apple-icon-76x76.png" />
+		<link
+			rel="apple-touch-icon"
+			sizes="114x114"
+			href="favicon/apple-icon-114x114.png" />
+		<link
+			rel="apple-touch-icon"
+			sizes="120x120"
+			href="favicon/apple-icon-120x120.png" />
+		<link
+			rel="apple-touch-icon"
+			sizes="144x144"
+			href="favicon/apple-icon-144x144.png" />
+		<link
+			rel="apple-touch-icon"
+			sizes="152x152"
+			href="favicon/apple-icon-152x152.png" />
+		<link
+			rel="apple-touch-icon"
 			sizes="180x180"
-			href="favicon/apple-touch-icon.png" />
+			href="favicon/apple-icon-180x180.png" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="192x192"
+			href="favicon/android-icon-192x192.png" />
 		<link
 			rel="icon"
 			type="image/png"
@@ -58,16 +98,18 @@
 		<link
 			rel="icon"
 			type="image/png"
+			sizes="96x96"
+			href="favicon/favicon-96x96.png" />
+		<link
+			rel="icon"
+			type="image/png"
 			sizes="16x16"
 			href="favicon/favicon-16x16.png" />
-		<link rel="manifest" href="favicon/site.webmanifest" />
-		<link
-			rel="mask-icon"
-			href="favicon/safari-pinned-tab.svg"
-			color="#5bbad5" />
-		<link rel="shortcut icon" href="favicon/favicon.ico" />
-		<meta name="msapplication-TileColor" content="#da532c" />
-		<meta name="msapplication-config" content="favicon/browserconfig.xml" />
+		<link rel="manifest" href="favicon/manifest.json" />
+		<meta name="msapplication-TileColor" content="#ffffff" />
+		<meta
+			name="msapplication-TileImage"
+			content="favicon/ms-icon-144x144.png" />
 		<meta name="theme-color" content="#ffffff" />
 
 		<!-- Core theme CSS -->
@@ -77,6 +119,28 @@
 			href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 		<script src="https://cdn.tailwindcss.com"></script>
+
+		<!-- Core theme CSS-->
+		<!-- shema -->
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "Organization",
+				"name": "Distribuidora Maravilla",
+				"url": "https://distrimaravilla.store",
+				"logo": "assets/img/logos/SVG/sin.svg",
+				"contactPoint": {
+					"@type": "ContactPoint",
+					"telephone": "(0986) 550-235",
+					"contactType": "customer service",
+					"areaServed": "PY"
+				},
+				"sameAs": [
+					"https://www.facebook.com/distrimaravilla",
+					"https://www.instagram.com/distrimaravilla"
+				]
+			}
+		</script>
 	</head>
 
 	<body class="font-sans bg-gray-800">
@@ -87,15 +151,17 @@
 				<a href="/" class="flex items-center text-2xl font-bold mt-4">
 					<img
 						src="assets\img\logos\SVG\sin.svg"
-						alt="Logo"
+						alt="Logo Distribuidora Maravilla"
 						class="h-10 w-auto" />
 				</a>
 				<!-- Enlaces de navegación -->
 				<div class="hidden sm:flex space-x-4">
-					<a href="#" class="hover:text-amber-500">Inicio</a>
-					<a href="/producto" class="hover:text-amber-500">Productos</a>
-					<a href="#" class="hover:text-amber-500">Contacto</a>
+					<a href="/" class="hover:text-amber-500">Inicio</a>
+					<a href="/productos" class="hover:text-amber-500">Productos</a>
+					<a href="/contacto" class="hover:text-amber-500">Contacto</a>
+					<a href="/faq" class="hover:text-amber-500">Preguntas Frecuentes</a>
 				</div>
+
 				<!-- Menú desplegable para dispositivos móviles -->
 				<div class="sm:hidden">
 					<button id="menu-toggle" class="text-white focus:outline-none">
@@ -114,14 +180,18 @@
 					</button>
 				</div>
 			</div>
+
 			<!-- Menú desplegable para dispositivos móviles -->
 			<div id="mobile-menu" class="hidden sm:hidden mt-2">
-				<a href="#" class="block px-4 py-2 text-sm hover:bg-gray-200">Inicio</a>
-				<a href="/producto" class="block px-4 py-2 text-sm hover:bg-gray-200"
+				<a href="/" class="block px-4 py-2 text-sm hover:bg-gray-200">Inicio</a>
+				<a href="/productos" class="block px-4 py-2 text-sm hover:bg-gray-200"
 					>Productos</a
 				>
-				<a href="#" class="block px-4 py-2 text-sm hover:bg-gray-200"
+				<a href="/contacto" class="block px-4 py-2 text-sm hover:bg-gray-200"
 					>Contacto</a
+				>
+				<a href="/faq" class="block px-4 py-2 text-sm hover:bg-gray-200"
+					>Preguntas Frecuentes</a
 				>
 			</div>
 		</nav>
