--- a/producto.html
+++ b/producto.html
@@ -10,7 +10,7 @@
 
 		<!-- Meta tags -->
 		<!-- Primary Meta Tags -->
-		<title>Distribuidora Maravilla | Preguntas Frecuentes</title>
+		<title>Distribuidora Maravilla | Productos</title>
 		<meta
 			name="description"
 			content="Distribuidora Maravilla: Mayorista de productos de limpieza en Asunción, Paraguay. Descubre nuestra variedad de productos de limpieza al por mayor, desde detergentes hasta soluciones especializadas. Calidad y servicio excepcionales para mantener tus espacios impecables. ¡Realiza tu pedido hoy y disfruta de envíos a Asunción y alrededores!" />
@@ -113,7 +113,7 @@
 		<meta name="theme-color" content="#ffffff" />
 
 		<!-- Core theme CSS -->
-		<link rel="stylesheet" href="css/styles.css" />
+
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -161,7 +161,6 @@
 					<a href="/contacto" class="hover:text-amber-500">Contacto</a>
 					<a href="/faq" class="hover:text-amber-500">Preguntas Frecuentes</a>
 				</div>
-
 				<!-- Menú desplegable para dispositivos móviles -->
 				<div class="sm:hidden">
 					<button id="menu-toggle" class="text-white focus:outline-none">
@@ -180,7 +179,6 @@
 					</button>
 				</div>
 			</div>
-
 			<!-- Menú desplegable para dispositivos móviles -->
 			<div id="mobile-menu" class="hidden sm:hidden mt-2">
 				<a href="/" class="block px-4 py-2 text-sm hover:bg-gray-200">Inicio</a>
@@ -196,29 +194,10 @@
 			</div>
 		</nav>
 
-		<section
-			class="bg-gray-900 p-8 rounded-lg text-center h-screen flex flex-col justify-center">
-			<h1 class="text-3xl font-bold mb-4 text-amber-500">
-				¡Gracias por Contactarnos! 🌟
-			</h1>
-			<p class="text-lg mb-4 text-white">
-				Hemos recibido tu mensaje y nos pondremos en contacto contigo pronto.
-				Apreciamos tu interés. 🚀
-			</p>
-			<p class="text-lg text-white">
-				Para cualquier otra consulta, no dudes en ponerte en contacto con
-				nosotros. 📞✉️
-			</p>
-			<div class="text-center mt-8">
-				<a
-					href="/"
-					class="bg-amber-500 text-white px-6 py-3 rounded-full font-bold hover:bg-amber-600 transition duration-300">
-					Volver al Inicio
-				</a>
-			</div>
-		</section>
-
 		<!-- Contenido -->
+		<main class="container mx-auto py-8" id="productoDetalle">
+			<!-- Detalles del producto se cargarán aquí dinámicamente -->
+		</main>
 
 		<!-- Footer -->
 		<footer class="bg-gray-800 text-white p-4 bottom-0 w-full">
@@ -271,6 +250,7 @@
 				</div>
 			</div>
 		</footer>
+
 		<!-- Core theme JS-->
 		<script src="js/scripts.js"></script>
 	</body>
