--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		<meta name="theme-color" content="#ffffff" />
 
 		<!-- Core theme CSS -->
-		<link rel="stylesheet" href="css/styles.css" />
+		<!-- <link rel="stylesheet" href="css/styles.css" /> -->
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -210,13 +210,13 @@
 					<div
 						class="swiper-slide bg-gradient-to-r from-purple-700 to-cyan-500 text-white flex items-center justify-center">
 						<p class="text-4xl font-bold">
-							<img src="assets\img\slider\slider1.webp" alt="" />
+							<img class="w-full" src="assets\img\slider\slider1.webp" alt="" />
 						</p>
 					</div>
 					<div
 						class="swiper-slide bg-gradient-to-r from-purple-700 to-cyan-500 text-white flex items-center justify-center">
 						<p class="text-4xl font-bold">
-							<img src="assets\img\slider\slider2.webp" alt="" />
+							<img class="w-full" src="assets\img\slider\slider2.webp" alt="" />
 						</p>
 					</div>
 				</div>
@@ -228,13 +228,13 @@
 		</div>
 		<!-- cta -->
 		<section
-			class="flex items-center justify-center bg-gray-900 text-white py-16">
+			class="flex items-center justify-center bg-gray-900 text-white py-16 lg:px-8 px-4">
 			<!-- Contenedor del Texto -->
 			<div
-				class="max-w-screen-lg mx-auto lg:flex lg:items-center lg:justify-between">
+				class="max-w-screen-lg mx-auto lg:flex lg:items-center lg:justify-between lg:flex-row flex-col">
 				<!-- Texto a la Izquierda -->
 				<div class="text-center lg:text-left lg:w-1/2 lg:pr-8">
-					<h2 class="text-3xl font-bold mb-4 text-amber-500">
+					<h2 class="text-3xl font-bold mb-4 text-amber-500 text-balance">
 						Descubre Nuestra Gama de Productos de Limpieza
 					</h2>
 					<p class="text-lg">
@@ -264,28 +264,27 @@
 					<img
 						src="assets\img\COMBO5X5.webp"
 						alt="Combo de productos de limpieza"
-						class="rounded-lg" />
+						class="rounded-lg mx-auto lg:mx-0 lg:w-full" />
 				</div>
 			</div>
 		</section>
 		<!-- cta -->
 		<!-- Sección "Lo Que Nos Distingue" -->
 		<section
-			class="flex items-center justify-center bg-gray-800 text-white py-16">
-			<!-- Contenedor del Texto -->
+			class="flex items-center justify-center bg-gray-800 text-white py-16 lg:px-8 px-4">
+			<!-- Contenedor del Texto e Imagen -->
 			<div
-				class="max-w-screen-lg mx-auto lg:flex lg:items-center lg:justify-between">
-				<!-- Imagen a la Izquierda -->
+				class="max-w-screen-lg mx-auto flex flex-col-reverse lg:flex-row lg:items-center lg:justify-between">
+				<!-- Imagen a la Derecha (en móvil será después del texto) -->
 				<div class="mt-6 lg:mt-0 lg:w-1/2">
 					<img
 						src="assets\img\entrega.webp"
-						alt="Imagend un camion haciendo entrega"
-						class="rounded-lg" />
+						alt="Imagen de un camión haciendo entrega"
+						class="rounded-lg mx-auto lg:mx-0 lg:w-full" />
 				</div>
-
-				<!-- Texto a la Derecha -->
-				<div class="text-center lg:text-left lg:w-1/2 lg:pl-8">
-					<h2 class="text-3xl font-bold mb-4 text-amber-500">
+				<!-- Texto a la Izquierda (en móvil será primero) -->
+				<div class="text-left lg:text-left lg:w-1/2 lg:pr-8">
+					<h2 class="text-3xl font-bold mb-4 text-amber-500 text-balance">
 						Nuestra Trayectoria y Compromiso
 					</h2>
 					<p class="text-lg">
@@ -306,9 +305,10 @@
 		</section>
 
 		<!-- Sección "El Voto de Confianza" centrada -->
-		<section class="bg-gray-900 py-16 mx-auto flex items-center justify-center">
+		<section
+			class="bg-gray-900 py-16 mx-auto flex items-center justify-center lg:px-8 px-4">
 			<div class="max-w-screen-lg">
-				<h2 class="text-3xl font-bold text-center mb-8 text-white">
+				<h2 class="text-3xl font-bold mb-4 text-amber-500 sm:mb-8">
 					Las Marcas Que Distribuimos
 				</h2>
 
