--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 		<meta
 			property="og:description"
 			content="Distribuidora Maravilla: Mayorista de productos de limpieza en Asunción, Paraguay. Descubre nuestra variedad de productos de limpieza al por mayor, desde detergentes hasta soluciones especializadas. Calidad y servicio excepcionales para mantener tus espacios impecables. ¡Realiza tu pedido hoy y disfruta de envíos a Asunción y alrededores!" />
-		<meta property="og:image" content="assets/img/ogefacebook.webp" />
+		<meta property="og:image" content="/assets/img/ogefacebook.webp" />
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
 		<meta property="twitter:url" content="https://distrimaravilla.store" />
-		<meta property="twitter:image" content="assets/img/ogefacebook.webp" />
+		<meta property="twitter:image" content="/assets/img/ogefacebook.webp" />
 
 		<meta
 			property="twitter:title"
@@ -49,7 +49,7 @@
 		<meta
 			property="twitter:description"
 			content="Distribuidora Maravilla: Mayorista de productos de limpieza en Asunción, Paraguay. Descubre nuestra variedad de productos de limpieza al por mayor, desde detergentes hasta soluciones especializadas. Calidad y servicio excepcionales para mantener tus espacios impecables. ¡Realiza tu pedido hoy y disfruta de envíos a Asunción y alrededores!" />
-		<meta property="twitter:image" content="assets/img/ogefacebook.webp" />
+		<meta property="twitter:image" content="/assets/img/ogefacebook.webp" />
 
 		<!-- Favicon -->
 		<link
@@ -207,10 +207,16 @@
 				<!-- Additional required wrapper -->
 				<div class="swiper-wrapper">
 					<!-- Slides -->
+
 					<div
 						class="swiper-slide bg-gradient-to-r from-purple-700 to-cyan-500 text-white flex items-center justify-center">
 						<p class="text-4xl font-bold">
-							<img class="w-full" src="assets\img\slider\slider1.webp" alt="" />
+							<a href="/productos.html"
+								><img
+									class="w-full"
+									src="assets\img\slider\slider1.webp"
+									alt=""
+							/></a>
 						</p>
 					</div>
 					<div
@@ -226,6 +232,7 @@
 				<div class="swiper-scrollbar"></div>
 			</div>
 		</div>
+
 		<!-- cta -->
 		<section
 			class="flex items-center justify-center bg-gray-900 text-white py-16 lg:px-8 px-4">
@@ -243,19 +250,14 @@
 						productos especializados, tenemos todo lo que necesitas para
 						mantener tus espacios impecables.
 					</p>
-					<p class="text-lg mt-4">
-						¡Contáctanos ahora a través de WhatsApp para obtener más información
-						y realizar tu pedido!
-					</p>
+
 					<!-- Botón de WhatsApp -->
-					<div class="text-center mt-8">
+					<div class="mt-8">
 						<a
-							href="https://wa.me/595986550235"
-							target="_blank"
-							rel="noopener noreferrer"
-							class="bg-green-500 text-white px-6 py-3 rounded-full font-bold hover:bg-green-600 transition duration-300">
-							¡Contáctenos en WhatsApp!
-						</a>
+							href="productos.html"
+							class="bg-amber-500 text-white px-4 py-2 mt-4 inline-block"
+							>Volver a Productos</a
+						>
 					</div>
 				</div>
 
@@ -364,17 +366,19 @@
 						<h3 class="text-xl font-bold mb-2">Síguenos</h3>
 						<ul>
 							<li>
-								<a href="#" target="_blank" rel="noopener noreferrer"
+								<a
+									href="https://www.facebook.com/distrimaravilla"
+									target="_blank"
+									rel="noopener noreferrer"
 									>Facebook</a
 								>
 							</li>
+
 							<li>
-								<a href="#" target="_blank" rel="noopener noreferrer"
-									>Twitter</a
-								>
-							</li>
-							<li>
-								<a href="#" target="_blank" rel="noopener noreferrer"
+								<a
+									href="https://www.instagram.com/distrimaravilla"
+									target="_blank"
+									rel="noopener noreferrer"
 									>Instagram</a
 								>
 							</li>
