--- a/faq.html
+++ b/faq.html
@@ -300,42 +300,49 @@
 						<p>Email: distri.maravilla@gmail.com</p>
 						<!-- Otras informaciones útiles -->
 					</div>
+
 					<!-- Enlaces Rápidos -->
 					<div class="w-full md:w-1/2 lg:w-1/4">
 						<h3 class="text-xl font-bold mb-2">Enlaces Rápidos</h3>
 						<ul>
-							<li><a href="#">Inicio</a></li>
-							<li><a href="#">Productos</a></li>
-							<li><a href="#">Contacto</a></li>
+							<li><a href="/">Inicio</a></li>
+							<li><a href="/productos">Productos</a></li>
+							<li><a href="/contacto">Contacto</a></li>
+							<li><a href="/faq">Preguntas Frecuentes</a></li>
 							<!-- Otros enlaces importantes -->
 						</ul>
 					</div>
+
 					<!-- Redes Sociales -->
 					<div class="w-full md:w-1/2 lg:w-1/4">
 						<h3 class="text-xl font-bold mb-2">Síguenos</h3>
 						<ul>
 							<li>
-								<a href="#" target="_blank" rel="noopener noreferrer"
+								<a
+									href="https://www.facebook.com/distrimaravilla"
+									target="_blank"
+									rel="noopener noreferrer"
 									>Facebook</a
 								>
 							</li>
+
 							<li>
-								<a href="#" target="_blank" rel="noopener noreferrer"
-									>Twitter</a
-								>
-							</li>
-							<li>
-								<a href="#" target="_blank" rel="noopener noreferrer"
+								<a
+									href="https://www.instagram.com/distrimaravilla"
+									target="_blank"
+									rel="noopener noreferrer"
 									>Instagram</a
 								>
 							</li>
 							<!-- Otros enlaces a redes sociales -->
 						</ul>
 					</div>
+
 					<!-- Derechos de Autor -->
 					<div class="w-full md:w-1/2 lg:w-1/4">
 						<h3 class="text-xl font-bold mb-2">Contacto</h3>
 						<p>¿Tienes alguna pregunta? ¡Contáctanos!</p>
+						<p>0986 550 235</p>
 					</div>
 				</div>
 			</div>
