--- a/productos.html
+++ b/productos.html
@@ -195,18 +195,35 @@
 		</nav>
 
 		<!-- Contenido -->
-		<main class="container mx-auto py-8 text-center">
-			<h1 class="text-4xl font-bold text-white mb-8">
+		<main class="container mx-auto py-8">
+			<h1 class="text-4xl font-bold text-white mb-8 text-center">
 				Nuestros
 				<span class="underline decoration-amber-500">Productos</span>
 			</h1>
+			<!-- Menú desplegable de categorías -->
+			<!-- Menú desplegable de categorías -->
+			<div class="mt-4 mb-8 sm:pl-2 md:pl-2 text-center">
+				<label
+					for="categoria"
+					class="block text-amber-500 text-sm font-bold mb-2"
+					>Filtrar por Categoría:</label
+				>
+				<select
+					id="categoria"
+					class="w-full max-w-xs px-4 py-2 border rounded-md shadow-sm focus:outline-none focus:border-amber-500"></select>
+			</div>
 
 			<!-- Sección de productos utilizando flexbox y grid para responsividad -->
 			<div
 				id="productosGrid"
-				class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 px-4">
+				class="w-fit mx-auto grid grid-cols-1 lg:grid-cols-3 md:grid-cols-2 justify-items-center justify-center gap-y-20 gap-x-14 mt-10 mb-5">
 				<!-- La lista de productos se generará aquí -->
 			</div>
+			<button
+				id="btnVerMas"
+				class="bg-blue-500 text-white px-4 py-2 mt-4 inline-block rounded-lg">
+				Ver Más
+			</button>
 		</main>
 
 		<!-- Footer -->
@@ -220,42 +237,49 @@
 						<p>Email: distri.maravilla@gmail.com</p>
 						<!-- Otras informaciones útiles -->
 					</div>
+
 					<!-- Enlaces Rápidos -->
 					<div class="w-full md:w-1/2 lg:w-1/4">
 						<h3 class="text-xl font-bold mb-2">Enlaces Rápidos</h3>
 						<ul>
-							<li><a href="#">Inicio</a></li>
-							<li><a href="#">Productos</a></li>
-							<li><a href="#">Contacto</a></li>
+							<li><a href="/">Inicio</a></li>
+							<li><a href="/productos">Productos</a></li>
+							<li><a href="/contacto">Contacto</a></li>
+							<li><a href="/faq">Preguntas Frecuentes</a></li>
 							<!-- Otros enlaces importantes -->
 						</ul>
 					</div>
+
 					<!-- Redes Sociales -->
 					<div class="w-full md:w-1/2 lg:w-1/4">
 						<h3 class="text-xl font-bold mb-2">Síguenos</h3>
 						<ul>
 							<li>
-								<a href="#" target="_blank" rel="noopener noreferrer"
+								<a
+									href="https://www.facebook.com/distrimaravilla"
+									target="_blank"
+									rel="noopener noreferrer"
 									>Facebook</a
 								>
 							</li>
+
 							<li>
-								<a href="#" target="_blank" rel="noopener noreferrer"
-									>Twitter</a
-								>
-							</li>
-							<li>
-								<a href="#" target="_blank" rel="noopener noreferrer"
+								<a
+									href="https://www.instagram.com/distrimaravilla"
+									target="_blank"
+									rel="noopener noreferrer"
 									>Instagram</a
 								>
 							</li>
 							<!-- Otros enlaces a redes sociales -->
 						</ul>
 					</div>
+
 					<!-- Derechos de Autor -->
 					<div class="w-full md:w-1/2 lg:w-1/4">
 						<h3 class="text-xl font-bold mb-2">Contacto</h3>
 						<p>¿Tienes alguna pregunta? ¡Contáctanos!</p>
+						<p>0986 550 235</p>
 					</div>
 				</div>
 			</div>
