--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 		<meta
 			property="og:description"
 			content="Distribuidora Maravilla: Mayorista de productos de limpieza en Asunción, Paraguay. Descubre nuestra variedad de productos de limpieza al por mayor, desde detergentes hasta soluciones especializadas. Calidad y servicio excepcionales para mantener tus espacios impecables. ¡Realiza tu pedido hoy y disfruta de envíos a Asunción y alrededores!" />
-		<meta property="og:image" content="/assets/img/ogefacebook.webp" />
+		<meta property="og:image" content="/assets/img/ogefacebook.jpg" />
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
 		<meta property="twitter:url" content="https://distrimaravilla.store" />
-		<meta property="twitter:image" content="/assets/img/ogefacebook.webp" />
+		<meta property="twitter:image" content="/assets/img/ogefacebook.jpg" />
 
 		<meta
 			property="twitter:title"
@@ -49,7 +49,7 @@
 		<meta
 			property="twitter:description"
 			content="Distribuidora Maravilla: Mayorista de productos de limpieza en Asunción, Paraguay. Descubre nuestra variedad de productos de limpieza al por mayor, desde detergentes hasta soluciones especializadas. Calidad y servicio excepcionales para mantener tus espacios impecables. ¡Realiza tu pedido hoy y disfruta de envíos a Asunción y alrededores!" />
-		<meta property="twitter:image" content="/assets/img/ogefacebook.webp" />
+		<meta property="twitter:image" content="/assets/img/ogefacebook.jpg" />
 
 		<!-- Favicon -->
 		<link
